images and logo folder added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <!-- Header Section -->
+    <!-- Header Section starts-->
     <header>
         <div class="logo">
             <p>Influencer products</p>
@@ -30,6 +30,21 @@
             </ul>
         </nav>
     </header>
+    <!-- Header Section ends -->
+
+    <!-- First section starts  -->
+    <section class="first_section container">
+        <div class="text_container">
+            <h1>Start your Journey as Influencer
+            </h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+            <button>Prebook Now</button>
+        </div>
+        <div class="image_container">
+            <img src="" alt="">
+        </div>
+    </section>
+    <!-- First section ends  -->
 </body>
 
 </html>
