--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
         <div class="text_container">
             <h1>Start your Journey as Influencer
             </h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-            <button>Prebook Now</button>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptatem vitae eos animi asperiores! Omnis quia provident, temporibus
+                tempore blanditiis obcaecati in veritatis eligendi iusto cum neque, eveniet assumenda rerum!</p>
+            <button>Prebook Now &nbsp;<i class="fas fa-arrow-right"></i></button>
         </div>
         <div class="image_container">
-            <img src="" alt="">
+            <img src="images/main-camera.png" alt="camera">
         </div>
     </section>
     <!-- First section ends  -->
