--- a/index.html
+++ b/index.html
@@ -46,6 +46,39 @@
         </div>
     </section>
     <!-- First section ends  -->
+
+    <!-- Logo section starts -->
+    <section class="logo_section container">
+        <div class="logo_container">
+            <img src="logos/Alibaba.svg" alt="alibaba">
+            <img src="logos/Amazon.svg" alt="amazon">
+            <img src="logos/Daraz.pk Logo.svg" alt="daraz">
+            <img src="logos/Ebay.svg" alt="Ebay">
+            <img src="logos/Rakuten.svg" alt="Rakuten">
+            <img src="logos/Walmart.svg" alt="Walmart">
+            <img src="logos/Target.svg" alt="Target">
+        </div>
+
+
+    </section>
+    <!-- Logo section ends -->
+
+    <!-- Popular Collection section starts -->
+    <section class="popular_collection">
+        <h2>Popular Collection</h2>
+        <div class="card_container">
+            <div class="card">card -1</div>
+            <div class="card">card -2</div>
+            <div class="card">card -3</div>
+            <div class="card">card -4</div>
+            <div class="card">card -5</div>
+            <div class="card">card -6</div>
+            <div class="card">card -7</div>
+            <div class="card">card -8</div>
+            <div class="card">card -9</div>
+        </div>
+    </section>
+    <!-- Popular Collection section ends -->
 </body>
 
 </html>
