popular collection section completed

--- a/index.html
+++ b/index.html
@@ -67,15 +67,140 @@
     <section class="popular_collection">
         <h2>Popular Collection</h2>
         <div class="card_container">
-            <div class="card">card -1</div>
-            <div class="card">card -2</div>
+            <div class="card">
+                <div class="card_image_container">
+                    <img src="images/tripod.png" alt="tripod">
+                </div>
+                <div class="card_text">
+                    <h2>Flex Tripod</h2>
+                    <p>$50.48</p>
+                    <div class="icon_container">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star non_colored"></i> &nbsp;&nbsp; <span>4.99</span>
+                    </div>
+                    <p class="grey_text">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="card_image_container">
+                    <img src="images/mic.png" alt="mic">
+                </div>
+                <div class="card_text">
+                    <h2>Microphone</h2>
+                    <p>$120.25</p>
+                    <div class="icon_container">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star "></i> &nbsp;&nbsp; <span>5.00</span>
+                    </div>
+                    <p class="grey_text">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="card_image_container">
+                    <img src="images/airpod.png" alt="airpod">
+                </div>
+                <div class="card_text">
+                    <h2>Airbuds</h2>
+                    <p>$100.00</p>
+                    <div class="icon_container">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star non_colored"></i><i class="fas fa-star non_colored"></i> &nbsp;&nbsp; <span>3.99</span>
+                    </div>
+                    <p class="grey_text">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="card_image_container">
+                    <img src="images/drone.png" alt="drone">
+                </div>
+                <div class="card_text">
+                    <h2>Drone</h2>
+                    <p>$980.25</p>
+                    <div class="icon_container">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star non_colored"></i><i class="fas fa-star non_colored"></i><i class="fas fa-star non_colored"></i> &nbsp;&nbsp; <span>2.99</span>
+                    </div>
+                    <p class="grey_text">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="card_image_container">
+                    <img src="images/lights.png" alt="lights">
+                </div>
+                <div class="card_text">
+                    <h2>Light Setup</h2>
+                    <p>$1200.00</p>
+                    <div class="icon_container">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star non_colored"></i> &nbsp;&nbsp; <span>4.99</span>
+                    </div>
+                    <p class="grey_text">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="card_image_container">
+                    <img src="images/setup.png" alt="Photoshoot">
+                </div>
+                <div class="card_text">
+                    <h2>Photoshoot Set</h2>
+                    <p>$820.40</p>
+                    <div class="icon_container">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star non_colored"></i><i class="fas fa-star non_colored"></i> &nbsp;&nbsp; <span>3.99</span>
+                    </div>
+                    <p class="grey_text">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="card_image_container">
+                    <img src="images/camera.png" alt="camera">
+                </div>
+                <div class="card_text">
+                    <h2>Vlogging Camera</h2>
+                    <p>$1800.80</p>
+                    <div class="icon_container">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star non_colored"></i> &nbsp;&nbsp; <span>4.99</span>
+                    </div>
+                    <p class="grey_text">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="card_image_container">
+                    <img src="images/single-light.png" alt="greenscreen">
+                </div>
+                <div class="card_text">
+                    <h2>Green Screen</h2>
+                    <p>$25.48</p>
+                    <div class="icon_container">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star "></i> &nbsp;&nbsp; <span>5.00</span>
+                    </div>
+                    <p class="grey_text">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+
+            </div>
+            <div class="card">
+                <div class="card_image_container">
+                    <img src="images/action.png" alt="action camera">
+                </div>
+                <div class="card_text">
+                    <h2>Action Camera</h2>
+                    <p>$380.00</p>
+                    <div class="icon_container">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star non_colored"></i> &nbsp;&nbsp; <span>4.99</span>
+                    </div>
+                    <p class="grey_text">Wordwide shifting available Buyers protection possible!</p>
+                </div>
+
+            </div>
+            <!-- <div class="card">card -2</div>
             <div class="card">card -3</div>
             <div class="card">card -4</div>
             <div class="card">card -5</div>
             <div class="card">card -6</div>
             <div class="card">card -7</div>
             <div class="card">card -8</div>
-            <div class="card">card -9</div>
+            <div class="card">card -9</div> -->
         </div>
     </section>
     <!-- Popular Collection section ends -->
