see more button added

--- a/index.html
+++ b/index.html
@@ -193,14 +193,11 @@
                 </div>
 
             </div>
-            <!-- <div class="card">card -2</div>
-            <div class="card">card -3</div>
-            <div class="card">card -4</div>
-            <div class="card">card -5</div>
-            <div class="card">card -6</div>
-            <div class="card">card -7</div>
-            <div class="card">card -8</div>
-            <div class="card">card -9</div> -->
+
+
+        </div>
+        <div class="see_more_container">
+            <p class="right_text">See more &nbsp;<i class="fas fa-arrow-right"></i></p>
         </div>
     </section>
     <!-- Popular Collection section ends -->
