footer section added

--- a/index.html
+++ b/index.html
@@ -199,8 +199,42 @@
         <div class="see_more_container">
             <p class="right_text">See more &nbsp;<i class="fas fa-arrow-right"></i></p>
         </div>
+
     </section>
     <!-- Popular Collection section ends -->
+
+
+
+    <!-- Contact Section starts -->
+    <section class="contact_section container">
+        <form action="#">
+            <h2>Contact Us</h2>
+            <input type="text" name="text" id="text" placeholder="Enter your name">
+            <br>
+            <input type="email" name="email" id="email" placeholder="Enter your Email">
+            <br>
+            <textarea name="message" id="message" cols="30" rows="10" placeholder="Write Message"></textarea>
+            <br>
+            <button class="btn">Submit</button>
+        </form>
+    </section>
+    <!-- Contact Section ends -->
+
+    <!-- Footer Section Starts -->
+    <footer>
+        <div class="footer_text">
+            <h2>Influencer products</h2>
+            <p>Copyright © 2020 influencer products</p>
+            <p>All rights reserved</p>
+            <div class="icons">
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-dribbble"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer Section Ends -->
 </body>
 
 </html>
