--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <div class="logo">
             <p>Influencer products</p>
         </div>
+        <!-- <div class="checkbox">
+
+        </div> -->
+        <input type="checkbox" name="checkbox" id="cbox">
+        <label for="cbox" class="nav_toggler"><i class="fas fa-bars"></i></label>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -27,8 +32,10 @@
                 <li><a href="#">Log In</a></li>
                 <li><a href="#"><i class="fas fa-search"></i></a></li>
                 <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+
             </ul>
         </nav>
+
     </header>
     <!-- Header Section ends -->
 
