--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptatem vitae eos animi asperiores! Omnis quia provident, temporibus
                 tempore blanditiis obcaecati in veritatis eligendi iusto cum neque, eveniet assumenda rerum!</p>
-            <button>Prebook Now &nbsp;<i class="fas fa-arrow-right"></i></button>
+            <button class="first_button">Prebook Now &nbsp;<i class="fas fa-arrow-right"></i></button>
         </div>
         <div class="image_container">
             <img src="images/main-camera.png" alt="camera">
