header section transition effect added

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         <div class="text_container">
             <h1>Start your Journey as Influencer
             </h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptatem vitae eos animi asperiores! Omnis quia provident, temporibus
-                tempore blanditiis obcaecati in veritatis eligendi iusto cum neque, eveniet assumenda rerum!</p>
+            <p>The Fujifilm X-T1 was a landmark camera in many ways, with it's extremely high resolution electronic viewfinder, great image quality, weather-sealed body, and engaging control system (we even gave it a Gold award). It's fairly commonplace
+                for camera companies to follow up successful launches of high-end products, such as the X-T1, with a slightly-stripped down, more reasonably-priced alternative that uses many of the same components; a younger sibling, if you will. The
+                Fujifilm X-T10 is exactly that.</p>
             <button class="first_button">Prebook Now &nbsp;<i class="fas fa-arrow-right"></i></button>
         </div>
         <div class="image_container">
